--- a/.env.development
+++ b/.env.development
@@ -5,8 +5,8 @@ VUE_APP_TITLE = 若依管理系统
 ENV = 'development'
 
 # 若依管理系统/开发环境
-#VUE_APP_BASE_API = '/dev-api'
-VUE_APP_BASE_API = 'http://119.91.192.232:16580/dev-api'
+VUE_APP_BASE_API = '/dev-api'
+
 
 # 路由懒加载
 VUE_CLI_BABEL_TRANSPILE_MODULES = true
