--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "js-calendar-converter": "^0.0.6",
     "js-cookie": "3.0.1",
     "jsencrypt": "3.0.0-rc.1",
+    "lunar-javascript": "^1.6.12",
     "nprogress": "0.2.0",
     "quill": "1.3.7",
     "screenfull": "5.0.2",
@@ -62,7 +63,7 @@
     "vue-cropper": "0.5.5",
     "vue-meta": "2.4.0",
     "vue-router": "3.4.9",
-    "vuedraggable": "2.24.3",
+    "vuedraggable": "^2.24.3",
     "vuex": "3.6.0",
     "zh-address-parse": "^1.3.16"
   },
