--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "js-cookie": "3.0.1",
     "jsencrypt": "3.0.0-rc.1",
     "lunar-javascript": "^1.6.12",
+    "lunar-typescript": "^1.7.5",
     "nprogress": "0.2.0",
     "quill": "1.3.7",
     "screenfull": "5.0.2",
