--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "vue": "2.6.12",
     "vue-count-to": "1.0.13",
     "vue-cropper": "0.5.5",
+    "vue-infinite-scroll": "^2.0.2",
     "vue-meta": "2.4.0",
     "vue-router": "3.4.9",
     "vuedraggable": "^2.24.3",
